schema/testdata/errors/clashing_explicit_implicit_inputs.keel
model Post {
    fields {
        title Text
    }

    actions {
        create createPost() with (title, coolTitle: Text) {
            //expect-error:18:28:ActionInputError:title is already being used as an input so cannot also be used in an expression
            @set(post.title = coolTitle)
        }
        list listPost(id, coolId: ID) {
            //expect-error:20:27:ActionInputError:id is already being used as an input so cannot also be used in an expression
            @where(post.id == coolId)
        }
    }
}
